--- a/src/views/auth/register.hbs
+++ b/src/views/auth/register.hbs
@@ -1,23 +1,60 @@
-<form>
-  <fieldset>
-    <legend>Crear Cuenta</legend>
-    <div class="form-group">
-        <label for="firstname" class="form-label">Firstname:</label>
-        <input type="text" class="form-control" name="firstname" id="firstname" placeholder="Enter firstname">
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3 center-form">
+      <form>
+        <fieldset>
+          <legend class="title-form">Crear Cuenta</legend>
+          <div class="form-group">
+            <label for="firstname" class="form-label mt-3">Nombre(s):</label>
+            <input
+              type="text"
+              class="form-control"
+              name="firstname"
+              id="firstname"
+              placeholder="Ingresa tu nombre"
+            />
+          </div>
+          <div class="form-group">
+            <label for="lastname" class="form-label mt-3">Apellido(s):</label>
+            <input
+              type="text"
+              class="form-control"
+              name="lastname"
+              id="lastname"
+              placeholder="Ingresa tu apellido"
+            />
+          </div>
+          <div class="form-group">
+            <label
+              for="exampleInputEmail1"
+              class="form-label mt-3"
+            >Correo:</label>
+            <input
+              type="email"
+              class="form-control"
+              id="exampleInputEmail1"
+              aria-describedby="emailHelp"
+              placeholder="Ingresa tu correo"
+            />
+            <small id="emailHelp" class="form-text text-muted">No compartiremos con nadie tu correo</small>
+          </div>
+          <div class="form-group">
+            <label
+              for="exampleInputPassword1"
+              class="form-label mt-3"
+            >Contraseña:</label>
+            <input
+              type="password"
+              class="form-control"
+              id="exampleInputPassword1"
+              placeholder="Ingresa tu contraseña"
+              autocomplete="off"
+            />
+          </div>
+          <button type="submit" class="btn btn-primary mt-3 mb-1 w-100">Registrarse</button>
+            <small id="emailHelp" class="form-text text-muted mt-3">Ya tienes una cuenta? Inicia Sesión</small>
+        </fieldset>
+      </form>
     </div>
-    <div class="form-group">
-        <label for="lastname" class="form-label">Lastname:</label>
-        <input type="text" class="form-control" name="lastname" id="lastname" placeholder="Enter lastname">
-    </div>
-    <div class="form-group">
-      <label for="exampleInputEmail1" class="form-label mt-4">Email:</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1" class="form-label mt-4">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" autocomplete="off">
-    </div>
-    <button type="submit" class="btn btn-primary mt-4">Submit</button>
-  </fieldset>
-</form>
+  </div>
+</div>
