--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -18,7 +18,7 @@
             {{>hero}}
         {{/if}}
     </header>
-    <main class="container p-2">
+    <main class="container">
         {{{body}}}
     </main>
 
