--- a/src/views/auth/register.hbs
+++ b/src/views/auth/register.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 offset-md-3 center-form">
-      <form>
+      <form action="/auth/register" method="POST">
         <fieldset>
           <legend class="title-form">Crear Cuenta</legend>
           <div class="form-group">
@@ -32,21 +32,22 @@
             <input
               type="email"
               class="form-control"
-              id="exampleInputEmail1"
-              aria-describedby="emailHelp"
+              name="email"
+              id="email"
               placeholder="Ingresa tu correo"
             />
             <small id="emailHelp" class="form-text text-muted">No compartiremos con nadie tu correo</small>
           </div>
           <div class="form-group">
             <label
-              for="exampleInputPassword1"
+              for="password"
               class="form-label mt-3"
             >Contraseña:</label>
             <input
               type="password"
               class="form-control"
-              id="exampleInputPassword1"
+              name="password"
+              id="password"
               placeholder="Ingresa tu contraseña"
               autocomplete="off"
             />
