--- a/src/views/auth/login.hbs
+++ b/src/views/auth/login.hbs
@@ -6,28 +6,28 @@
           <legend class="title-form">Iniciar Sesión</legend>
           <div class="form-group">
             <label
-              for="exampleInputEmail1"
+              for="email"
               class="form-label mt-3"
             >Correo:</label>
             <input
               type="email"
               class="form-control"
-              id="exampleInputEmail1"
-              aria-describedby="emailHelp"
-              placeholder="Ingresa tu correo"
+              name="email"
+              id="email"
+              value="{{data.email}}"
             />
           </div>
           <div class="form-group">
             <label
-              for="exampleInputPassword1"
+              for="password"
               class="form-label mt-3"
             >Contraseña:</label>
             <input
               type="password"
               class="form-control"
-              id="exampleInputPassword1"
-              placeholder="Ingresa tu contraseña"
+              id="password"
               autocomplete="off"
+              name="password"
             />
           </div>
           <button type="submit" class="btn btn-primary mt-3 mb-1 w-100">Ingresar</button>
