Se creó la pantalla inicial del administrador

--- a/src/views/profile/admin.hbs
+++ b/src/views/profile/admin.hbs
@@ -1,3 +1,123 @@
-<h1>
-    holaaaa
-</h1>
+<div class="admin-container d-flex">
+
+  <aside>
+        <h3>Clínica Digitalers</h3>
+        <p>Administración</p>
+        <hr />
+
+        <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block sidebar">
+            <div class="position-sticky">
+                <ul class="nav flex-column ms-4">
+                    <li class="nav-item btn-aside">
+                        <a class="nav-link active d-flex" href="#">
+                          <i class="fa-solid fa-house icon"></i>
+                          <p class="text">Dashboard</p>
+                        </a>
+                    </li>
+                    <li class="nav-item btn-aside">
+                        <a class="nav-link active d-flex" href="#">
+                          <i class="fa-solid fa-user-doctor icon"></i>
+                          <p class="text">Médicos</p>
+                        </a>
+                    </li>
+                    <li class="nav-item btn-aside">
+                        <a class="nav-link active d-flex" href="#">
+                          <i class="fa-solid fa-hospital-user icon"></i>
+                          <p class="text">Pacientes</p>
+                        </a>
+                    </li>
+                    <li class="nav-item btn-aside">
+                        <a class="nav-link active d-flex" href="#">
+                          <i class="fa-solid fa-laptop-medical icon"></i>
+                          <p class="text">Consultas</p>
+                        </a>
+                    </li>
+                    <li class="nav-item btn-aside">
+                        <a class="nav-link active d-flex" href="#">
+                           <i class="fa-solid fa-book-medical icon"></i>
+                          <p class="text">Expedientes</p>
+                        </a>
+                    </li>
+                    
+                </ul>
+            </div>
+        </nav>
+    </aside>
+
+    <!-- Container for Bootstrap Cards -->
+    <div class="container mt-5">
+        <div class="row">
+            <!-- Card 1 -->
+            <div class="col-md-6 d-flex justify-content-center">
+                <div class="card text-white bg-success m-2" style="width: 25rem;">
+                    <div class="card-body">
+                      <div class="d-flex justify-content-between">
+                      <i class="fa-solid fa-user-doctor fa-10x"></i>
+                        <div class="d-flex flex-column justify-content-end align-items-end">
+                          <p class="array-number">4</p>
+                          <h4 class="card-title">Médicos</h4>
+                        </div>
+                      </div>
+                      <div>
+                        <a href="#" class="btn btn-card-dashboard w-100 mt-2">Ver más</a>
+                      </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="col-md-6 d-flex justify-content-center">
+                <div class="card text-white bg-danger m-2" style="width: 25rem;">
+                  <div class="card-body">
+                    <div class="d-flex justify-content-between">
+                      <i class="fa-solid fa-hospital-user fa-10x"></i>
+                        <div class="d-flex flex-column justify-content-end align-items-end">
+                          <p class="array-number">4</p>
+                          <h4 class="card-title">Pacientes</h4>
+                        </div>
+                     </div>
+                    <div>
+                      <a href="#" class="btn btn-card-dashboard w-100 mt-2">Ver más</a>
+                    </div>
+                  </div>
+                </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="col-md-6 d-flex justify-content-center">
+                 <div class="card text-white bg-warning m-2" style="width: 25rem;">
+                  <div class="card-body">
+                    <div class="d-flex justify-content-between">
+                      <i class="fa-solid fa-laptop-medical fa-10x"></i>
+                      <div class="d-flex flex-column justify-content-end align-items-end">
+                        <p class="array-number">4</p>
+                        <h4 class="card-title">Consultas</h4>
+                      </div>
+                    </div>
+                    <div>
+                      <a href="#" class="btn btn-card-dashboard w-100 mt-2">Ver más</a>
+                    </div>
+                  </div>
+                </div>
+            </div>
+
+            <!-- Card 4 -->
+            <div class="col-md-6 d-flex justify-content-center">
+                <div class="card text-white bg-info m-2" style="width: 25rem;">
+                  <div class="card-body">
+                    <div class="d-flex justify-content-between">
+                      <i class="fa-solid fa-book-medical fa-10x"></i>
+                      <div class="d-flex flex-column justify-content-end align-items-end">
+                        <p class="array-number ">4</p>
+                        <h4 class="card-title">Expedientes</h4>
+                      </div>
+                    </div>
+                    <div>
+                      <a href="#" class="btn btn-card-dashboard w-100 mt-2">Ver más</a>
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
