--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -83,3 +83,115 @@ form {
     animation: fadeIn 0.3s ease-in-out;
 }
 
+.array-number {
+    font-size: 4rem;
+}
+
+.btn-card-dashboard {
+    border-color: white;
+    color: white;
+    transition: 0.3s ease-in-out;
+}
+.btn-card-dashboard:focus,
+.btn-card-dashboard:hover {
+    background-color: white;
+    color: black;
+}
+.container-dashboard {
+    min-height: 100vh;
+}
+
+/*****************************************************
+                    SIDEBAR
+******************************************************/
+
+aside {
+    visibility: hidden;
+    display: none;
+   
+}
+@media ( min-width:800px ){
+    aside {
+        display: block;
+        visibility: visible;
+        background-color: #333;
+        color: #fff;
+        padding: 20px;
+        height: 100vh;
+        width: 400px;
+    }
+}
+
+
+
+.text {
+    font-size: 18px;
+    font-weight: 500;
+    color: white;
+    width: 100%;
+    height: 100%;
+}
+.sidebar li {
+    list-style: none;
+    margin-top: 10px;
+    height: 2.5rem;
+    display: flex;
+    align-items: center;
+}
+.sidebar li a {
+    width: 100%;
+    height: 100%;
+    
+    /* justify-content: center; */
+    text-decoration: none;
+    border-radius: 6px;
+    transition: 0.3s ease-in-out;
+}
+.sidebar li a:hover {
+    background-color: var(--bs-green);
+}
+.admin-container {
+    min-height: 100vh;
+    width: 100%;
+}
+
+.sidebar header .togle {
+    position: absolute;
+    top: 50%;
+    right: -25px;
+    transform: translateY(-50%);
+    height: 35px;
+    width: 35px;
+    background-color: var(--bs-green);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+
+/* .nav-l a {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+} */
+
+.sidebar li .icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 40px;
+    font-size: 20px;
+    color: white;
+}
+
+.btn-aside {
+    border: 1px solid white;
+    border-radius: 6px;
+}
+
+aside br {
+    color: #fff;
+    background-color: #fff;
+    width: 4rem;
+}
