--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <!-------------- CUSTOM STYLES  ----------------->
     <link rel="stylesheet" href="/css/main.css">
+    <!-------------- ICONOS  ----------------->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"/>
 </head>
 <body>
     {{#if navbar}}
@@ -18,7 +25,7 @@
             {{>hero}}
         {{/if}}
     </header>
-    <main class="container">
+    <main>
         {{#if messages }}
             <div class="alerts">
                 {{#showAlerts messages}}
