--- a/src/views/profile/admin.hbs
+++ b/src/views/profile/admin.hbs
@@ -59,7 +59,7 @@
                         </div>
                       </div>
                       <div>
-                        <a href="#" class="btn btn-card-dashboard w-100 mt-2">Ver más</a>
+                        <a href="/doctor" class="btn btn-card-dashboard w-100 mt-2">Ver más</a>
                       </div>
                     </div>
                 </div>
