--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{pageName}}</title>
+
+    <!-------------- DATATABLE  ----------------->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css">
     <!-------------- BOOTSTRAP STYLES  ----------------->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
+
     <!-------------- CUSTOM STYLES  ----------------->
     <link rel="stylesheet" href="/css/main.css">
     <!-------------- ICONOS  ----------------->
@@ -37,6 +42,13 @@
     </main>
 
 
+    <!-------------- DATATABLE  ----------------->
+      <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
+      <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+      <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
+
+      
       <script src="/js/bootstrap.bundle.min.js"></script>
+      <script src="/js/dataTable.js"></script>
 </body>
 </html>
