--- a/src/views/profile/user.hbs
+++ b/src/views/profile/user.hbs
@@ -1,11 +1,11 @@
-<section style="background-color: #f8f8f8;" class="mt-4 fade-in">
+<section style="background-color: #f8f8f8;" class="container fade-in">
     <div class="row p-3">
       <div class="col-lg-4">
         <div class="card mb-4">
           <div class="card-body text-center">
             <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
               class="rounded-circle img-fluid" style="width: 150px;">
-            <h5 class="my-3">John Smith</h5>
+            <h5 class="my-3">{{user.firstname}}</h5>
             <p class="text-muted mb-1">Bay Area, San Francisco, CA</p>
             <p class="text-muted mb-4">Paciente</p>
             <div class="d-flex justify-content-center mb-2">
@@ -49,7 +49,7 @@
                 <p class="mb-0">Nombre(s)</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">Johnatan</p>
+                <p class="text-muted mb-0">{{user.firstname}}</p>
               </div>
             </div>
             <hr>
@@ -58,7 +58,7 @@
                 <p class="mb-0">Apellido(s)</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0"> Smith</p>
+                <p class="text-muted mb-0">{{user.lastname}}</p>
               </div>
             </div>
             <hr>
@@ -67,7 +67,7 @@
                 <p class="mb-0">Correo</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">example@example.com</p>
+                <p class="text-muted mb-0">{{user.email}}</p>
               </div>
             </div>
             <hr>
