Conexión actualizada con cloudinary y limpieza de código

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -195,3 +195,9 @@ aside br {
     background-color: #fff;
     width: 4rem;
 }
+
+.img-profile {
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
+}
