--- a/src/views/profile/user.hbs
+++ b/src/views/profile/user.hbs
@@ -3,14 +3,19 @@
       <div class="col-lg-4">
         <div class="card mb-4">
           <div class="card-body text-center">
+            {{#if user.image}}
+              <img src={{user.image}} alt="avatar"
+                class="rounded-circle img-profile">
+            {{else}}
             <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
-              class="rounded-circle img-fluid" style="width: 150px;">
+                class="rounded-circle img-profile">
+            {{/if}}
+            
             <h5 class="my-3">{{user.firstname}}</h5>
-            <p class="text-muted mb-1">Bay Area, San Francisco, CA</p>
+            <p class="text-muted mb-1">{{user.adress}}</p>
             <p class="text-muted mb-4">Paciente</p>
             <div class="d-flex justify-content-center mb-2">
-              <button type="button" class="btn btn-primary">Follow</button>
-              <button type="button" class="btn btn-outline-primary ms-1">Message</button>
+              <button type="button" class="btn btn-primary">Editar Perfil</button>
             </div>
           </div>
         </div>
@@ -76,7 +81,7 @@
                 <p class="mb-0">Teléfono</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">(097) 234-5678</p>
+                <p class="text-muted mb-0">{{user.phone}}</p>
               </div>
             </div>
             <hr>
@@ -85,7 +90,7 @@
                 <p class="mb-0">Celular</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">(098) 765-4321</p>
+                <p class="text-muted mb-0">{{user.cellphone}}</p>
               </div>
             </div>
             <hr>
@@ -94,7 +99,7 @@
                 <p class="mb-0">Dirección</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">Bay Area, San Francisco, CA</p>
+                <p class="text-muted mb-0">{{user.adress}}</p>
               </div>
             </div>
           </div>
