--- a/src/views/profile/user.hbs
+++ b/src/views/profile/user.hbs
@@ -15,7 +15,7 @@
             <p class="text-muted mb-1">{{user.adress}}</p>
             <p class="text-muted mb-4">Paciente</p>
             <div class="d-flex justify-content-center mb-2">
-              <button type="button" class="btn btn-primary">Editar Perfil</button>
+              <a href="/user/profile/update/{{user._id}}" class="btn btn-primary">Editar Perfil</a>
             </div>
           </div>
         </div>
