Se agregaron validaciones del lado de la vista

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -50,5 +50,6 @@
       
       <script src="/js/bootstrap.bundle.min.js"></script>
       <script src="/js/dataTable.js"></script>
+      <script src="/js/validation.js"></script>
 </body>
 </html>
