--- a/src/views/profile/form.hbs
+++ b/src/views/profile/form.hbs
@@ -1,45 +1,69 @@
 <div class="container">
-<form action="/images/{{user._id}}?_method=PUT" method="POST" class="fade-in mb-5 mt-5 needs-validation" novalidate enctype="multipart/form-data">
-  <input type="hidden" name="_method" value="PUT">
-  <fieldset>
-    <legend>Foto de perfil</legend>
+  <form
+    action="/images/{{user._id}}?_method=PUT"
+    method="POST"
+    class="fade-in mb-5 mt-5 needs-validation"
+    novalidate
+    enctype="multipart/form-data"
+  >
+    <input type="hidden" name="_method" value="PUT" />
     <div class="row">
-      <div class="mb-3 col-6">
-      <label for="image" class="form-label">Subir imagen</label>
-      <input type="file"
-                    class="form-control"
-                    name="image"
-                    accept="image/*"
-                    id="image" required>
-        <div class="invalid-feedback">
-        Selecciona una imagen.
+      <div class="col-6">
+        <fieldset>
+          <legend>Editar foto de perfil</legend>
+          <div class="mb-3 p-2 mt-3">
+            <label for="image" class="form-label">Subir imagen:</label>
+            <input
+              type="file"
+              class="form-control"
+              name="image"
+              accept="image/*"
+              id="image"
+              required
+            />
+            <div class="invalid-feedback">
+              Selecciona una imagen.
+            </div>
+          </div>
+        </fieldset>
+      </div>
+      <div class="col-6 image-update">
+        {{#if user.image}}
+          <img
+            src={{user.image}}
+            alt="avatar"
+            class="rounded-circle img-profile"
+          />
+        {{else}}
+          <img
+            src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp"
+            alt="avatar"
+            class="rounded-circle img-profile"
+          />
+        {{/if}}
       </div>
     </div>
-    {{#if user.image}}
-      <img src={{user.image}} alt="avatar" class="rounded-circle img-profile">
-    {{else}}
-      <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar" class="rounded-circle img-profile">
-    {{/if}}
+    <div class="row mt-3">
+      <div class="col-4">
+        <button type="reset" class="btn btn-warning mt-3 mb-1 w-100">Resetear</button>
+      </div>
+      <div class="col-4">
+        <button type="submit" class="btn btn-primary mt-3 mb-1 w-100">Actualizar</button>
+      </div>
     </div>
-  </fieldset>
-  <div class="row mt-3">
-        <div class="col-4">
-          <button type="reset" class="btn btn-warning mt-3 mb-1 w-100">Resetear Formulario</button>
-        </div>
-        <div class="col-4">
-          <button type="submit" class="btn btn-primary mt-3 mb-1 w-100">Subir Imagen</button>
-        </div>
-        <div class="col-4">
-          <a href="#" class="btn btn-danger mt-3 mb-1 w-100">Borrar Imagen</a>
-        </div>
-  </div>
-</form>
-<form action="/user/{{data._id}}?_method=PUT" method="POST" class="fade-in needs-validation" novalidate>
-    <input type="hidden" name="_method" value="PUT">
-  <fieldset>
-    <legend>Editar información personal</legend> 
-    <div class="row">
-        <div class="form-group col-6">
+  </form>
+  <form
+    action="/user/{{data._id}}?_method=PUT"
+    method="POST"
+    class="fade-in needs-validation"
+    novalidate
+  >
+    <input type="hidden" name="_method" value="PUT" />
+    <div class="row mb-3">
+      <fieldset class="form-group border p-3 mt-3">
+        <legend>Editar información personal</legend>
+        <div class="row">
+          <div class="form-group col-6">
             <label for="firstname" class="form-label mt-3">Nombre(s):</label>
             <input
               type="text"
@@ -48,7 +72,7 @@
               id="firstname"
               value="{{user.firstname}}"
               required
-            >
+            />
             <div class="invalid-feedback">
               Debes ingresar un nombre
             </div>
@@ -67,13 +91,10 @@
               Debes ingresar un apellido
             </div>
           </div>
-    </div>
-    <div class="row">
-        <div class="form-group col-6">
-            <label
-              for="email"
-              class="form-label mt-3"
-            >Correo:</label>
+        </div>
+        <div class="row">
+          <div class="form-group col-6">
+            <label for="email" class="form-label mt-3">Correo:</label>
             <input
               type="email"
               class="form-control"
@@ -86,11 +107,76 @@
               Debes ingresar un email
             </div>
           </div>
+
+        </div>
+        <div class="row">
           <div class="form-group col-6">
-            <label
-              for="password"
-              class="form-label mt-3"
-            >Contraseña:</label>
+            <label for="phoneNumber" class="form-label mt-3">Teléfono:</label>
+            <input
+              type="tel"
+              class="form-control"
+              name="phoneNumber"
+              id="phoneNumber"
+              value="{{user.phoneNumber}}"
+              required
+            />
+            <div class="invalid-feedback">
+              Debes ingresar un número de teléfono
+            </div>
+          </div>
+          <div class="form-group col-6">
+            <label for="cellphone" class="form-label mt-3">Celular:</label>
+            <input
+              type="tel"
+              class="form-control"
+              name="cellphone"
+              id="cellphone"
+              value="{{user.cellphone}}"
+              required
+            />
+            <div class="invalid-feedback">
+              Debes ingresar un número de celular
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="form-group col-6">
+            <label for="adress" class="form-label mt-3">Dirección:</label>
+            <input
+              type="text"
+              class="form-control"
+              name="adress"
+              id="adress"
+              value="{{user.adress}}"
+              required
+            />
+            <div class="invalid-feedback">
+              Debes ingresar tu dirección
+            </div>
+          </div>
+          <div class="col-6">
+            <label for="locality" class="form-label mt-3">Localidad:</label>
+            <input
+              type="text"
+              class="form-control"
+              name="locality"
+              id="locality"
+              value="{{user.locality}}"
+              required
+            />
+            <div class="invalid-feedback">
+              Debes ingresar una localidad
+            </div>
+          </div>
+        </div>
+      </fieldset>
+    </div>
+    <div class="row">
+      <fieldset class="form-group border p-3 mt-3">
+        <legend class="w-auto px-6">Actualizar contraseña</legend>
+        <div class="row">
+          <div class="form-group col-7">
+            <label for="password" class="form-label mt-3">Contraseña actual:</label>
             <input
               type="password"
               class="form-control"
@@ -100,89 +186,57 @@
               required
             />
             <div class="invalid-feedback">
-              Debes ingresar la contraseña
+              Debes ingresar la contraseña actual
             </div>
           </div>
-    </div>
-    <div class="row">
-        <div class="form-group col-6">
-          <label
-            for="phoneNumber"
-            class="form-label mt-3"
-          >Teléfono:</label>
-          <input
-            type="tel"
-            class="form-control"
-            name="phoneNumber"
-            id="phoneNumber"
-            value="{{user.phoneNumber}}"
-            required
-          />
-          <div class="invalid-feedback">
-              Debes ingresar un número de teléfono
+          <div class="form-group col-6">
+            <label for="newPassword" class="form-label mt-3">Nueva contraseña:</label>
+            <input
+              type="newPassword"
+              class="form-control"
+              name="newPassword"
+              id="newPassword"
+              autocomplete="off"
+              required
+            />
+            <div class="invalid-feedback">
+              Ingresa tu nueva contraseña
+            </div>
+          </div>
+          <div class="form-group col-6">
+            <label for="newPassword2" class="form-label mt-3">Confirmar
+              contraseña:</label>
+            <input
+              type="newPassword2"
+              class="form-control"
+              name="newPassword2"
+              id="newPassword2"
+              autocomplete="off"
+              required
+            />
+            <div class="invalid-feedback">
+              Las contraseñas no coinciden
+            </div>
           </div>
         </div>
-        <div class="form-group col-6">
-          <label
-            for="cellphone"
-            class="form-label mt-3"
-          >Celular:</label>
-          <input
-            type="tel"
-            class="form-control"
-            name="cellphone"
-            id="cellphone"
-            value="{{user.cellphone}}"
-            required
-          />
-          <div class="invalid-feedback">
-              Debes ingresar un número de celular
-          </div>
-        </div>       
-    </div>
-    <div class="row">
-      <div class="form-group col-6">
-        <label for="adress" class="form-label mt-3">Dirección:</label>
-        <input
-          type="text"
-          class="form-control"
-          name="adress"
-          id="adress"
-          value="{{user.adress}}"
-          required
-        />
-        <div class="invalid-feedback">
-            Debes ingresar tu dirección
-        </div>
-      </div>
-      <div class="col-6">
-        <label for="locality" class="form-label mt-3">Localidad:</label>
-        <input
-          type="text"
-          class="form-control"
-          name="locality"
-          id="locality"
-          value="{{user.locality}}"
-          required
-        />
-        <div class="invalid-feedback">
-            Debes ingresar una localidad
-        </div>
-      </div>
+      </fieldset>
     </div>
     <hr />
     <div class="row mt-3">
-        <div class="col-4">
-          <button type="reset" class="btn btn-warning mt-3 mb-1 w-100">Resetear Formulario</button>
-        </div>
-        <div class="col-4">
-          <button type="submit" class="btn btn-primary mt-3 mb-1 w-100">Editar</button>
-        </div>
-        <div class="col-4">
-          <a href="/doctor" class="btn btn-danger mt-3 mb-1 w-100">Cancelar</a>
-        </div>
+      <div class="col-4">
+        <button type="reset" class="btn btn-warning mt-3 mb-1 w-100">Resetear
+          Formulario</button>
+      </div>
+      <div class="col-4">
+        <button
+          type="submit"
+          class="btn btn-primary mt-3 mb-1 w-100"
+        >Editar</button>
+      </div>
+      <div class="col-4">
+        <a href="/doctor" class="btn btn-danger mt-3 mb-1 w-100">Cancelar</a>
+      </div>
     </div>
-  </fieldset>
-</form>
+  </form>
 
 </div>
