--- a/src/views/partials/navegation.hbs
+++ b/src/views/partials/navegation.hbs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
   <div class="container-fluid">
     <div class="mr-auto w-100">
-      <a class="navbar-brand" href="#">Medical Digitalers</a>
+      <a class="navbar-brand" href="/">Medical Digitalers</a>
 
     </div>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Home
+          <a class="nav-link active" href="/">Home
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
