--- a/src/views/profile/form.hbs
+++ b/src/views/profile/form.hbs
@@ -58,6 +58,7 @@
     action="/user/{{user._id}}?_method=PUT"
     method="POST"
     class="fade-in needs-validation"
+    id="updateForm"
     novalidate
   >
     <input type="hidden" name="_method" value="PUT" />
@@ -185,40 +186,40 @@
               name="password"
               id="password"
               autocomplete="off"
-              {{!-- required --}}
             />
-            {{!-- <div class="invalid-feedback">
-              Debes ingresar la contraseña actual
-            </div> --}}
+            <div class="invalid-feedback">
+              Debes ingresar tu contraseña actual
+            </div>
+         
           </div>
           <div class="form-group col-6">
             <label for="newPassword" class="form-label mt-3">Nueva contraseña:</label>
             <input
-              type="newPassword"
+              type="password"
               class="form-control"
               name="newPassword"
               id="newPassword"
               autocomplete="off"
-              {{!-- required --}}
+              disabled
             />
-            {{!-- <div class="invalid-feedback">
-              Ingresa tu nueva contraseña
-            </div> --}}
           </div>
           <div class="form-group col-6">
-            <label for="newPassword2" class="form-label mt-3">Confirmar
+            <label for="confirmPassword" class="form-label mt-3">Confirmar
               contraseña:</label>
             <input
-              type="newPassword2"
+              type="password"
               class="form-control"
-              name="newPassword2"
-              id="newPassword2"
+              name="confirmPassword"
+              id="confirmPassword"
               autocomplete="off"
-              {{!-- required --}}
+              disabled
             />
-            {{!-- <div class="invalid-feedback">
+            <div class="valid-feedback">
+              Las contraseñas coinciden
+            </div>
+            <div class="invalid-feedback">
               Las contraseñas no coinciden
-            </div> --}}
+            </div>
           </div>
         </div>
       </fieldset>
@@ -236,7 +237,7 @@
         >Editar</button>
       </div>
       <div class="col-4">
-        <a href="/doctor" class="btn btn-danger mt-3 mb-1 w-100">Cancelar</a>
+        <a href="/user/profile" class="btn btn-danger mt-3 mb-1 w-100">Cancelar</a>
       </div>
     </div>
   </form>
