--- a/src/views/profile/user.hbs
+++ b/src/views/profile/user.hbs
@@ -81,7 +81,7 @@
                 <p class="mb-0">Teléfono</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">{{user.phone}}</p>
+                <p class="text-muted mb-0">{{user.phoneNumber}}</p>
               </div>
             </div>
             <hr>
